# graphics-net-transfers

./: .gitignore  README.md  adding_plane.py  blender_hints_ng.py  gn_instancing__attributes_v3.blend
Blender_addon/: __init__.py  mb_server.py
display_server_addon/: __init__.py  blender_server_addon.py  blender_server_service.py  blender_utils.py  buckets_with_graphics_pb2.py  buckets_with_graphics_pb2_grpc.py  color_palette.py
docs/: Blender_geomNodes_layout.xcf  adding_plane.py  blender_ideas.odp  gn_instancing__attributes_v2.blend  gn_instancing__attributes_v8.blend  messaging_outline.txt  populating_ref_shapes.py
peer_in_cpp/: CMakeLists.txt  vcpkg.json
peer_in_cpp/src/: demo_client.cpp  demo_server.cpp  points_and_lines.grpc.pb.h  points_and_lines.pb.h  proto
peer_in_java/: pom.xml
peer_in_java/src/main/: proto
peer_in_java/src/main/java/cz/it4i/ulman/transfers/graphics/: DemoClient.java  DemoServer.java  EmptyIgnoringStreamObservers.java
peer_in_python/: buckets_with_graphics_pb2.py  buckets_with_graphics_pb2_grpc.py  client_listens.py  client_requests.py  client_requests2.py  client_requests_v2.py  demo_client.py  demo_server.py  points_and_lines_pb2.py  points_and_lines_pb2_grpc.py  server_listens.py  server_talksback.py
peer_in_python/demo/: listen_to_create_tree_data.py  points_and_lines_pb2.py  points_and_lines_pb2_grpc.py  send_trees.py
peer_in_python/demo_ng/: blender_server_listens.py  blender_utils.py  buckets_with_graphics_pb2.py  buckets_with_graphics_pb2_grpc.py  buckets_with_graphics_pb2_grpc_orig.py  client_requests.py  client_requests2.py
protocol_specification/: buckets_with_graphics.proto  codegen.py  points_and_lines.proto
server_in_Blender/: adding_plane.py  gn_instancing__attributes_v4.blend  gn_instancing__attributes_v5.blend  messaging_outline.txt
